yopass/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: yopass
spec:
  parentRefs:
    - kind: Gateway
      name: kubernetes-gateway
      namespace: istio-system
  hostnames:
    - yopass.awes.one
  rules:
    - backendRefs:
        - name: yopass
          port: 1337
