yopass/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: yopass
spec:
  gateways:
    - istio-system/awes-gateway
  hosts:
    - yopass.awes.one
  http:
    - route:
      - destination:
          host: yopass
          port:
            number: 1337
